# rustget

./: Cargo.toml  LICENSE-MIT  README.md
src/: cli.rs  fetcher.rs  lib.rs  main.rs
