[package]
name = "rustget"
version = "0.1.0"
authors = ["SummaDiaboli <salim.hussaini@backlinq.ng>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "rget"
path = "src/main.rs"

[dependencies]
parallel-getter = "0.2.0"
reqwest = "0.9.18"
quicli = "0.4.0"
structopt = "0.2.18"
indicatif = "0.11.0"
# tokio ="0.1.22"
# tokio-threadpool = "0.1.15"
# futures = "0.1.28"
# futures-preview = { version = "=0.3.0-alpha.16", features = ["compat"] }
