[package]
name = "rustget"
version = "0.1.2"
authors = ["SummaDiaboli <salim.hussaini@backlinq.ng>"]
edition = "2018"
description = """
rustget is a parallel downloader
"""
readme = "README.md"
license = "MIT"
documentation = "https://github.com/SummaDiaboli/rustget"
homepage = "https://github.com/SummaDiaboli/rustget"
repository = "https://github.com/SummaDiaboli/rustget"
keywords = ["get", "command-line", "file-download"]
categories = ["command-line-utilities"]

[[bin]]
name = "rget"
path = "src/main.rs"


[dependencies]
parallel-getter = "0.2.0"
reqwest = "0.9.18"
quicli = "0.4.0"
structopt = "0.2.18"
indicatif = "0.11.0"
